syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "LucasNotes.NoteService.Protos.Note";

package NoteManager;

message NoteDto {
	int32 Id = 1;
	string Name = 2;
	int32 FolderId = 3;
	string Content = 4;
	string Tag = 5;
	int32 UserId = 6;
}

message GetNotesReply {
	repeated NoteDto Notes = 1;
}

message GetNoteByIdRequest {
	int32 Id = 1;
	int32 UserId = 2;
}

message GetNoteByFolderIdRequest {
	int32 FolderId = 1;
	int32 UserId = 2;
}

message SuccessMsg {
	bool Success = 1;
}

message UpdateNotesRequest {
	repeated NoteDto Notes = 1;
	int32 UserId = 2;
}

message DeleteNotesRequest {
	repeated int32 Ids = 1;
	int32 UserId = 2;
}

message AddNoteRequest {
	int32 UserId = 1;
	NoteDto Note = 2;
}

message GetNotesRequest {
	int32 UserId = 1;
}

service NoteManager {
	rpc GetNotes (google.protobuf.Empty) returns (GetNotesReply);
	rpc GetNoteById (GetNoteByIdRequest) returns (NoteDto);
	rpc GetNoteByFolderId (GetNoteByFolderIdRequest) returns (GetNotesReply);
	rpc UpdateNote (NoteDto) returns (SuccessMsg);
	rpc UpdateNotes (UpdateNotesRequest) returns (SuccessMsg);
	rpc DeleteNotes (DeleteNotesRequest) returns (SuccessMsg);
	rpc AddNote (AddNoteRequest) returns (SuccessMsg);
}

